# wanx-image-edit

./: .gitignore  README.md  README_zh-CN.md  package.oo.yaml  pyproject.toml
flows/flow-1/: .flow.ui.oo.json  flow.oo.yaml
oo-locales/: en.json  zh-CN.json
slotflows/+slotflow#1/: .slotflow.ui.oo.json  slotflow.oo.yaml
subflows/wanx-image-edit/: .subflow.ui.oo.json  subflow.oo.yaml
tasks/wanx-image-edit/: task.oo.yaml
tasks/wanx-image-edit-block/: index.ts  task.oo.yaml
